# faser-common

./: .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md  setup.sh
CablingDB/: cablingDB.py  extractDigitizerMapping.py
EventFormats/: CMakeLists.txt
EventFormats/CompressionEngine/: compressionConfig.json  compressionUtility.cxx  compressionlib.hpp  eventProcess.dict
EventFormats/CompressionEngine/exampleConfigs/: brotliConfig.json  lz4Config.json
EventFormats/EventFormats/: BOBRDataFragment.hpp  DAQFormats.hpp  DigitizerDataFragment.hpp  FletcherChecksum.hpp  TLBDataFragment.hpp  TLBMonitoringFragment.hpp  TrackerDataFragment.hpp  TrackerDataFragment.icc
EventFormats/apps/: eventCompress.cxx  eventDictionary.cxx  eventDump.cxx
EventFormats/apps/Logs/: README.MD  default.json  logTest.json  logTest20230612224936_2447.json  logTest20230612224936_2447_decompression.json  logTest20230612224955_7662.json  logTest20230612224955_7662_decompression.json  logTest20230612225005_2781.json  logTest20230612225005_2781_decompression.json  logTest20230612225013_2039.json  logTest20230612225013_2039_decompression.json  logTest20230612225024_1408.json  logTest20230612225024_1408_decompression.json  logTest20230613004042_3764.json  logTest20230613004218_830.json  logTest20230613004233_5418.json  logTest20230613010455_6278.json  logTest20230613010455_6278_decompression.json  logTest20230613010541_9485.json  logTest20230613010541_9485_decompression.json  logTest20230618003110_2567.json  logTest20230618111621_5345_decompression.json  logTest20230622185747_6343.json  logTest20230622185747_6343_decompression.json  logTest20230622185758_5554.json  logTest20230622185758_5554_decompression.json  logTest20230622194142_3918.json  logTest20230622194142_3918_decompression.json  logTest20230629010809_5586_decompression.json  logTest20230629100443_5306.json  logTest20230629100902_2994.json  logTest20230629100902_2994_decompression.json  logTest_decompression.json
EventFormats/apps/Logs/Test Runs/DevTestLogs/: logTest20230618111621_5345.json  logTest20230629010809_5586.json  logTest20230629011328_9842.json  logTest20230629011328_9842_decompression.json
EventFormats/apps/Logs/Test_Runs/DevTestLogs/: logTest20230618112157_6133.json  logTest20230618112157_6133_decompression.json  logTest20230622185825_6399.json  logTest20230622185825_6399_decompression.json  logTest20230629100443_5306_decompression.json  logTest20230702073943_2462.json  logTest20230702073943_2462_decompression.json  logTest20230707092441_4375.json  logTest20230707231915_7425.json  logTest20230707232028_2067.json  logTest20230707232028_2067_decompression.json
EventFormats/apps/Logs/notebooks/: analysisNotebook.ipynb  analysisTestRun.ipynb  default.json  logTest.json
EventFormats/apps/Logs/scripts/: checkIntegrety.py  checkRunTIme.py  checksumValidate.py
EventFormats/apps/ReferenceOutput/: ref_digitizer  ref_tlb  ref_tlbdata  ref_tlbdata_v1  ref_tlbdata_v2  ref_tlbmonitoring_v1  ref_tlbmonitoring_v2
Exceptions/: CMakeLists.txt
Exceptions/Exceptions/: Exceptions.hpp
Logging/: CMakeLists.txt
Logging/include/: Logging.hpp
tests/: CMakeLists.txt  test_compression_engine.cxx
